nifi/k8s/apache-nifi/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nifi-http
  namespace: nifi
spec:
  type: LoadBalancer
  selector:
    app: nifi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: nifi
---
kind: Service
apiVersion: v1
metadata:
  name: nifi
  namespace: nifi
  labels:
    app: nifi
spec:
  clusterIP: None
  ports:
    - name: nifi-listen-http
      port: 8081
      targetPort: 8081
    - name: nifi-site-protocol 
      port: 2881
      targetPort: 2881
    - name: nifi-node-protocol
      port: 2882
      targetPort: 2882
  selector:
    app: nifi
