nifi/k8s/apache-nifi/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nifi
  namespace: nifi
spec:
  rules:
  - host: nifi.px
    http:
      paths:
      - path: /
        backend:
          serviceName: nifi-http
          servicePort: 8081
